--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -109,9 +109,9 @@
               <div class="row mt-5">
                   <div class="col-12 col-md-12 text-center">
                     <h3>Que son Los Magios?</h3>
-                    <p class="mb-4">Official Name: Japan National Tourism Organization | Established: 1964
-                      <br>Purpose: Committed to the development of international tourism exchanges
-                      <br>Headquarters: 1-6-4, Yotsuya, Shinjuku-ku, Tokyo 160-0004.</p>
+                    <p class="mb-4">Somos un equipo de desarrolladores de la provincia de Tucumán. Estudiantes de la academia Rolling Code School
+                      <br>
+                      <br>Headquarters: Tucumán, Argentina</p>
                       <hr class="about-hr">
                     <h3>Activities</h3>
                     <p class="mb-4">Los Magios is involved in a broad range of activities both domestically and worldwide, to encourage international tourists from all over the world to visit Japan.</p>
@@ -235,7 +235,7 @@
                 </div>
              </div>
     </main>
-    <footer class="footer-wrap">
+    <footer class="footer-wrap footerNos">
       <div class="container-fluid">
         <div class="row">
           <div class="column1 col-12 col-md-4 text-center">
